--- a/LabWeek9a.html
+++ b/LabWeek9a.html
@@ -68,10 +68,10 @@
 <div class="dropdown">
 <button onclick="myFunction()" class="dropbtn">Apply Theme: </button>
   <div id="myDropdown" class="dropdown-content">
-     <a href="#YinTheme"<input type="button" value="Yin Theme" onclick="apply_theme('yin ☯')">Yin</a>
-     <a href="#YangTheme"<input type="button" value="Yang Theme" onclick="apply_theme('yang ☯')">Yang</a>
-     <a href="#AutumnTheme"<input type="button" value="Autumn Theme" onclick="apply_theme('fall 🎃')">Halloween</a>
-     <a href="#WinterTheme"<input type="button" value="Winter Theme" onclick="apply_theme('winter 🎄')">Christmas</a>
+     <a href="#YinTheme"<input type="button" value="Yin Theme" onclick="apply_theme('yin')">Yin ☯</a>
+     <a href="#YangTheme"<input type="button" value="Yang Theme" onclick="apply_theme('yang')">Yang ☯</a>
+     <a href="#AutumnTheme"<input type="button" value="Autumn Theme" onclick="apply_theme('fall')">Halloween 🎃</a>
+     <a href="#WinterTheme"<input type="button" value="Winter Theme" onclick="apply_theme('winter')">Christmas 🎄</a>
      
   </div>
 </div>
