--- a/LabWeek9a.html
+++ b/LabWeek9a.html
@@ -159,7 +159,7 @@ function apply_theme(theme)
   }
   document.body.style.color = fg_color;
   document.body.style.backgroundColor = bg_color;
-  document.body.style.element = a_color;
+  document.body.style.attributes = a_color;
   localStorage.setItem( 'theme', theme );
 }
 var saved_theme = localStorage.getItem('theme');
