--- a/LabWeek9a.html
+++ b/LabWeek9a.html
@@ -78,17 +78,17 @@
 <hr>
 
 <dl>
-<section id="RAM">
+<section id="#RAM">
 
 <dt>Rick and Morty: </dt>
 <dd>To be fair, you have to have a very high IQ to understand Rick and Morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head. There's also Rick's nihilistic outlook, which is deftly woven into his characterisation - his personal philosophy draws heavily from Narodnaya Volya literature, for instance. The fans understand this stuff; they have the intellectual capacity to truly appreciate the depths of these jokes, to realize that they're not just funny- they say something deep about LIFE. As a consequence people who dislike Rick and Morty truly ARE idiots- of course they wouldn't appreciate, for instance, the humour in Rick's existencial catchphrase "Wubba Lubba Dub Dub," which itself is a cryptic reference to Turgenev's Russian epic Fathers and Sons I'm smirking right now just imagining one of those addlepated simpletons scratching their heads in confusion as Dan Harmon's genius unfolds itself on their television screens. What fools... how I pity them. lol And yes by the way, I DO have a Rick and Morty tattoo. And no, you cannot see it. It's for the ladies' eyes only- And even they have to demonstrate that they're within 5 IQ points of my own (preferably lower) beforehand.</dd>
 <br>
-<section id="TSC">
+<section id="#TSC">
 
 <dt>Trump saved Christmas: </dt>
 <dd>Today at Walmart I told the cashier Merry Christmas. She said, "Happy Holidays, ma'am, I smiled and said "You don't have to be afraid anymore. President Trump gave us Christmas back" she started crying tears of joy and said "Merry Christmas" and then everyone in the store applauded.</dd>
 <br>
-<section id="MNJ">
+<section id="#MNJ">
 
 <dt>I'll have you know my name is John: </dt>
 <dd>What the fuck did you just fucking say about me, you little bitch. I will have you know my name is John, and I woke up this morning 5:30 sharp to the smell of wet pussy. I was getting a blowjob from two bitches (Shit was SO Cash), one was trying to fit my humongous 3 pound balls in her mouth while the other was choking halfway on my 18 and 3\8 inch dick. She started to squirt hard, she was convulsing and having 6 orgasms at the same time. I gave it to them and they were on the floor squirting like motherfucking fountains. Must have come about a quart of sperm and compressed air. Imagine your best orgasm, then multiply it by 35. I had to go to base camp so I front-flipped from my 14th floor barracks into my valet parked 2012 Ferrari (I got connexions). Pushed my shit to about 4 hundo (mph, mind you) and I was at base camp in no time. When I entered, I became a top sniper and was granted access to the entire arsenal of the USMC. I learned how to kill someone in over 700 different ways and was assigned to be the leader of a squad that will kill 300 terrorists using gorilla warfare tactics. Also did 6000 push-ups, 8000 sit-ups and bench-pressed 30 plates in 16 minutes. After basic training, I met a network of secret spies who will help me trace your IP address, while eating gold plated sushi and 15,000 $ champagne. My unit got the rest of the day off and I became captain of our base’s football team and starter of the basketball team. I got straight A’s on the military entrance exams and received more awards. Meanwhile, you were jacking off to pictures on Facebook and naked drawn Japanese people. Went back in the Lambo to my barracks and now I am getting ready to go to sleep. I am going to graduate at the top of my class in the Navy Seals tomorrow and I want to look pretty much perfect for it. Dot be a stranger and remember, I did more in one day than you will your entire life.</dd>
