--- a/LabWeek9a.html
+++ b/LabWeek9a.html
@@ -61,9 +61,9 @@
 
 <h2>Lab Week 9: Dropdown Theme Selector</h2>
 <ul>
-<li id="RAM"><a href="#RAM">Rick and Morty</a></li>
-<li id="TSC"><a href="#TSC">Trump Saved Christmas</a></li>
-<li id="MNJ"><a href="#MNJ">I'll have you know my name is John</a></li>
+<li id="aRAM"><a href="#RAM">Rick and Morty</a></li>
+<li id="aTSC"><a href="#TSC">Trump Saved Christmas</a></li>
+<li id="aMNJ"><a href="#MNJ">I'll have you know my name is John</a></li>
 </ul>
 <div class="dropdown">
 <button onclick="myFunction()" class="dropbtn">Apply Theme: </button>
@@ -161,11 +161,11 @@ function apply_theme(theme)
   }
   document.body.style.color = fg_color;
   document.body.style.backgroundColor = bg_color;
-  document.getElementById("RAM").style.color = a_color;
+  document.getElementById("aRAM").style.color = a_color;
   document.getElementsByTagName("a")[0].style.color = a_color;
-  document.getElementById("TSC").style.color = a_color;
+  document.getElementById("aTSC").style.color = a_color;
   document.getElementsByTagName("a")[1].style.color = a_color;
-  document.getElementById("MNJ").style.color = a_color;
+  document.getElementById("aMNJ").style.color = a_color;
   document.getElementsByTagName("a")[2].style.color = a_color;
   localStorage.setItem( 'theme', theme );
 }
