--- a/Readings.html
+++ b/Readings.html
@@ -4,7 +4,7 @@
     <title>Reading</title>
     <meta charset="UTF-8">
         	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		      <link rel="stylesheet" href="ProjectStyle.css">
+		      <!--<link rel="stylesheet" href="ProjectStyle.css">-->
 </head>
 <body>
     <h1>Reading log and Summary:</h1>
@@ -12,8 +12,7 @@
     <figure>
     <nav>
     <table>
-        <tr><th><b>Table of Contents:</b></th></tr>
-	    
+        <tr><th><b>Table of Contents:</b></th></tr> 
         <tr><td><b>Author |</td><td> Title</b></td></tr>
         <tr><td><i><a href="#ArtOfWar">Sun Tzu |</td><td> The Art of War</a></i></td></tr>
         <tr><td><i><a href="#BookOf5Rings">Miyamoto Musashi |</td><td> A Book of 5 Rings</a></i></td></tr>
