--- a/Readings.html
+++ b/Readings.html
@@ -13,11 +13,11 @@
     <nav>
     <table>
         <tr><th><b>Table of Contents:</b></th></tr> 
-        <tr><td><b>Author |</td><td> Title</b></td></tr>
-        <tr><td><i><a href="#ArtOfWar">Sun Tzu |</td><td> The Art of War</a></i></td></tr>
-        <tr><td><i><a href="#BookOf5Rings">Miyamoto Musashi |</td><td> A Book of 5 Rings</a></i></td></tr>
-        <tr><td><i><a href="#Dracula">Bram Stoker |</td><td> Dracula</a></i></td></tr>
-        <tr><td><i><a href="#JourneyToTheW">Wu Cheng'en |</td><td> Journey to the West</a></i></td></tr>
+	<tr><td><b>Author </td><td>|</td><td> Title</b></td></tr>
+	<tr><td><i><a href="#ArtOfWar">Sun Tzu <td></td>|</td><td> The Art of War</a></i></td></tr>
+	<tr><td><i><a href="#BookOf5Rings">Miyamoto Musashi <td></td>|</td><td> A Book of 5 Rings</a></i></td></tr>
+	<tr><td><i><a href="#Dracula">Bram Stoker <td></td>|</td><td> Dracula</a></i></td></tr>
+	<tr><td><i><a href="#JourneyToTheW">Wu Cheng'en <td></td>|</td><td> Journey to the West</a></i></td></tr>
     </table>
     </nav>
     </figure>
