--- a/Readings.html
+++ b/Readings.html
@@ -7,7 +7,7 @@
 		      <!--<link rel="stylesheet" href="ProjectStyle.css">-->
 </head>
 <body>
-    <h1>Reading log and Summary:</h1>
+    <h1>Reading Log and Summary:</h1>
     <hr>
     <figure>
     <nav>
@@ -26,16 +26,19 @@
         <dt>Sun Tzu | Art of War: December 2, 2018</dt>
         <dd>Chapter 1: </dd>
     </dl>
+	    <hr>
     <section id="BookOf5Rings">
      <dl>
         <dt>Miyamoto Musashi | A Book of 5 Rings: January ##, 2019</dt>
         <dd>Filler </dd>
     </dl>
+	    <hr>
     <section id="Dracula">
     <dl>
         <dt>Bram Stoker | Dracula: February ##, 2019</dt>
         <dd>Filler </dd>
     </dl>
+	    <hr>
     <section id="JourneyToTheW">
      <dl>
         <dt>Wu Cheng'en | Journey to the West: March ##, 2019</dt>
