--- a/Readings.html
+++ b/Readings.html
@@ -4,21 +4,21 @@
     <title>Reading</title>
     <meta charset="UTF-8">
         	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		      <!--<link rel="stylesheet" href="ProjectStyle.css">-->
+		<link rel="stylesheet" href="ProjectStyle.css">
 </head>
 <body>
     <h1>Reading Log and Summary:</h1>
     <hr>
     <figure>
     <nav>
-    <table>
-        <tr><th><b>Table of Contents:</b></th></tr> 
-	<tr><td><b>Author </td><td>|</td><td> Title</b></td></tr>
-	<tr><td><i><a href="#ArtOfWar">Sun Tzu <td></td>|</td><td> The Art of War</a></i></td></tr>
-	<tr><td><i><a href="#BookOf5Rings">Miyamoto Musashi <td></td>|</td><td> A Book of 5 Rings</a></i></td></tr>
-	<tr><td><i><a href="#Dracula">Bram Stoker <td></td>|</td><td> Dracula</a></i></td></tr>
-	<tr><td><i><a href="#JourneyToTheW">Wu Cheng'en <td></td>|</td><td> Journey to the West</a></i></td></tr>
-    </table>
+    <ul>
+	<dl><b>Table of Contents:</b></dl>
+	<dd><b>Author | Title</b></dd>
+	<dd><i><a href="#ArtOfWar">Sun Tzu | The Art of War</a></i></dd>
+	<dd><i><a href="#BookOf5Rings">Miyamoto Musashi | A Book of 5 Rings</a></i></dd>
+	<dd><i><a href="#Dracula">Bram Stoker | Dracula</a></i></dd>
+	<dd><i><a href="#JourneyToTheW">Wu Cheng'en | Journey to the West</a></i></dd>
+    </ul>
     </nav>
     </figure>
     <section id="ArtOfWar">
