--- a/Readings.html
+++ b/Readings.html
@@ -23,25 +23,25 @@
     </figure>
     <section id="ArtOfWar">
     <dl>
-        <dt>Sun Tzu | Art of War: December 2, 2018</dt>
+	    <dt><b>Sun Tzu | Art of War: December 2, 2018</b></dt>
         <dd>Chapter 1: </dd>
     </dl>
 	    <hr>
     <section id="BookOf5Rings">
      <dl>
-        <dt>Miyamoto Musashi | A Book of 5 Rings: January ##, 2019</dt>
+	     <dt><b>Miyamoto Musashi | A Book of 5 Rings: January ##, 2019</b></dt>
         <dd>Filler </dd>
     </dl>
 	    <hr>
     <section id="Dracula">
     <dl>
-        <dt>Bram Stoker | Dracula: February ##, 2019</dt>
+	    <dt><b>Bram Stoker | Dracula: February ##, 2019</b></dt>
         <dd>Filler </dd>
     </dl>
 	    <hr>
     <section id="JourneyToTheW">
      <dl>
-        <dt>Wu Cheng'en | Journey to the West: March ##, 2019</dt>
+	     <dt><b>Wu Cheng'en | Journey to the West: March ##, 2019</b></dt>
         <dd>Filler </dd>
     </dl>
 </body>
