--- a/Readings.html
+++ b/Readings.html
@@ -26,20 +26,21 @@
 	    <dt><b>Sun Tzu | Art of War: December 2, 2018</b></dt>
         <dd>Chapter 1: The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.<br>
 		There are 5 factors to consider in one's army: 
-		<br><i>The Moral Law</i>, the law in which causes the people to be in complete accord with their ruler, so that they will follow him regardless of their lives, undismayed by any danger.
-		<br><i>Heaven</i>, the importance of night and day, cold and heat, times and seasons.
-		<br><i>Earth</i>, the comprise of distances, great and small; danger and security; open ground and narrow passes; the chances of life and death.
-		<br><i>The Commander</i>, the virtues of wisdom, sincerely, benevolence, courage and strictness.
-		<br><i>Method and Discipline</i>, the marshaling of the army in its proper subdivisions, the graduations of rank among the officers, the maintenance of roads by which supplies may reach the army, and the control of military expenditure.
+		<br>(1)<i> &nbsp; The Moral Law</i>, the law in which causes the people to be in complete accord with their ruler, so that they will follow him regardless of their lives, undismayed by any danger.
+		<br>(2)<i> &nbsp; Heaven</i>, the importance of night and day, cold and heat, times and seasons.
+		<br>(3)<i> &nbsp; Earth</i>, the comprise of distances, great and small; danger and security; open ground and narrow passes; the chances of life and death.
+		<br>(4)<i> &nbsp; The Commander</i>, the virtues of wisdom, sincerely, benevolence, courage and strictness.
+		<br>(5)<i> &nbsp; Method and Discipline</i>, the marshaling of the army in its proper subdivisions, the graduations of rank among the officers, the maintenance of roads by which supplies may reach the army, and the control of military expenditure.
 		<br>
-		When seeking to determine the military conditions, let them be made the basis of a comparison, in this wise:—
-		<br>(1) Which of the two sovereigns is imbued with the Moral law?
-		<br>(2) Which of the two generals has most ability?
-		<br>(3) With whom lie the advantages derived from Heaven and Earth?
-		<br>(4) On which side is discipline most rigorously enforced?
-		<br>(5) Which army is stronger?
-		<br>(6) On which side are officers and men more highly trained?
-		<br>(7) In which army is there the greater constancy both in reward and punishment?
+		<br>When seeking to determine the military conditions, let them be made the basis of a comparison, in this wise:—
+		<br>(1) &nbsp; Which of the two sovereigns is imbued with the Moral law?
+		<br>(2) &nbsp; Which of the two generals has most ability?
+		<br>(3) &nbsp; With whom lie the advantages derived from Heaven and Earth?
+		<br>(4) &nbsp; On which side is discipline most rigorously enforced?
+		<br>(5) &nbsp; Which army is stronger?
+		<br>(6) &nbsp; On which side are officers and men more highly trained?
+		<br>(7) &nbsp; In which army is there the greater constancy both in reward and punishment?
+		<br>
 		<br>Take advantage to any helpful circumstances over and beyond the ordinary rules;
 		<br>Depending whether the situations are favorable, one should modify one’s plans if things don't go as it should.
 		<br>All warfare is based on deception; hence, when able to attack, we must seem unable to; when using our forces, we must seem inactive; when we are near, we must make the enemy believe we are far away; when far away, we must make him believe we are near. Hold out baits to entice the enemy. Feign disorder, and crush him.
