--- a/Readings.html
+++ b/Readings.html
@@ -24,8 +24,8 @@
     <section id="ArtOfWar">
     <dl>
 	    <dt><b>Sun Tzu | Art of War: December 2, 2018</b></dt>
-        <dd>Chapter 1: The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.<br>
-		There are 5 factors to consider in one's army: 
+	    <dd><b>Chapter 1:</b> The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.
+		<br>There are 5 factors to consider in one's army: 
 		<br>(1)<i> &nbsp; The Moral Law</i>, the law in which causes the people to be in complete accord with their ruler, so that they will follow him regardless of their lives, undismayed by any danger.
 		<br>(2)<i> &nbsp; Heaven</i>, the importance of night and day, cold and heat, times and seasons.
 		<br>(3)<i> &nbsp; Earth</i>, the comprise of distances, great and small; danger and security; open ground and narrow passes; the chances of life and death.
@@ -41,14 +41,14 @@
 		<br>(6) &nbsp; On which side are officers and men more highly trained?
 		<br>(7) &nbsp; In which army is there the greater constancy both in reward and punishment?
 		<br>
-		<br>Take advantage to any helpful circumstances over and beyond the ordinary rules;
+		<br> &nbsp; Take advantage to any helpful circumstances over and beyond the ordinary rules;
 		<br>Depending whether the situations are favorable, one should modify one’s plans if things don't go as it should.
 		<br>All warfare is based on deception; hence, when able to attack, we must seem unable to; when using our forces, we must seem inactive; when we are near, we must make the enemy believe we are far away; when far away, we must make him believe we are near. Hold out baits to entice the enemy. Feign disorder, and crush him.
 		<br>If he is secure at all points, be prepared for him. If he is in superior strength, evade him. If your opponent is easy to anger, seek to irritate him. Pretend to be weak, that he may grow arrogant. If he is taking his ease, give him no rest. If his forces are united, separate them. Attack him where he is unprepared, appear where you are not expected. These military devices, leading to victory, must not be known to the enemy beforehand.
 		<br>Now the general who wins a battle makes many calculations in his temple ere the battle is fought. The general who loses a battle makes but few calculations beforehand. Thus do many calculations lead to victory, and few calculations to defeat: how much more no calculation at all! It is by attention to this point that I can foresee who is likely to win or lose.
 	</dd>
 	<dd>
-		...
+		<b>Chapter 2:</b>
 	</dd>
     </dl>
 	    <hr>
