--- a/Readings.html
+++ b/Readings.html
@@ -48,7 +48,7 @@
 		<br>Now the general who wins a battle makes many calculations in his temple ere the battle is fought. The general who loses a battle makes but few calculations beforehand. Thus do many calculations lead to victory, and few calculations to defeat: how much more no calculation at all! It is by attention to this point that I can foresee who is likely to win or lose.
 	</dd>
 	<dd>
-		<b>Chapter 2:</b>
+		<br><b>Chapter 2:</b>
 	</dd>
     </dl>
 	    <hr>
