--- a/Readings.html
+++ b/Readings.html
@@ -33,9 +33,9 @@
 		<br>(5)<i> &emsp; Method and Discipline</i>, the marshaling of the army in its proper subdivisions, the graduations of rank among the officers, the maintenance of roads by which supplies may reach the army, and the control of military expenditure.
 		<br>
 		<br>When seeking to determine the military conditions, let them be made the basis of a comparison, in this wise:—
-		<br>(1) &emsp; Which of the two sovereigns is imbued with the Moral law?
+		<br>(1) &emsp; Which of the two sovereigns is imbued with the <i>Moral law</i>?
 		<br>(2) &emsp; Which of the two generals has most ability?
-		<br>(3) &emsp; With whom lie the advantages derived from Heaven and Earth?
+		<br>(3) &emsp; With whom lie the advantages derived from <i>Heaven</i> and <i>Earth</i>?
 		<br>(4) &emsp; On which side is discipline most rigorously enforced?
 		<br>(5) &emsp; Which army is stronger?
 		<br>(6) &emsp; On which side are officers and men more highly trained?
