--- a/Readings.html
+++ b/Readings.html
@@ -23,7 +23,7 @@
     </figure>
     <section id="ArtOfWar">
     <dl>
-	    <dt><b>Sun Tzu | Art of War: December 2, 2018</b></dt>
+	    <dt><b><u>Sun Tzu | Art of War: December 2, 2018</b></u></dt>
 	    <dd><b>Chapter 1:</b> The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.
 		<br>There are 5 factors to consider in one's army: 
 		<br>(1)<i> &emsp; The Moral Law</i>, the law in which causes the people to be in complete accord with their ruler, so that they will follow him regardless of their lives, undismayed by any danger.
