--- a/Readings.html
+++ b/Readings.html
@@ -49,10 +49,10 @@
 	</dd>
 	<dd>
 		<br><b>Chapter 2:</b> In the operations of war where your enemy can possess many soldiers and firepower, so will the cost in raising these soldiers.
-		<br>When engaging in a fight, if a victory is long in coming, then your men’s weapons will grow dull and their spirits will weaken. 
+		<br> &emsp; When engaging in a fight, if a victory is long in coming, then your men’s weapons will grow dull and their spirits will weaken. 
 		If you lay siege to a town, you will exhaust your strength and resources. Again, if the campaign is prolonged, the resources won't be able to pay for its strains; you will lose more than what you're fighting for. 
 		If your weapons are dulled, your spirits are low, your strength is exhausted and your treasure is spent, other chieftains will take advantage of your limits. From there, no man however skilled or wise, will be able to avoid the consequences that's about to come.
-		<br>We are well aware of 'stupid haste' in wars, yet long delays is never thought of cleverness. There's no country that benefits from a prolonged war. The only exception are those well acquainted with the evils of war that can only understand the profitable ways of carrying it on.
+		<br> &emsp; We are well aware of 'stupid haste' in wars, yet long delays is never thought of cleverness. There's no country that benefits from a prolonged war. The only exception are those well acquainted with the evils of war that can only understand the profitable ways of carrying it on.
 		The skillful soldier does not raise reinforcements, neither are his supplies loaded more than twice as needed. Instead bring your war material from home, but forage on the enemy so the army will have food enough for its needs.
 		The Poverty of the State exchequer (system that manages its resources) maintains an army by contributions from a distance. Contributing to maintain an army at a distance causes the people to be poor. On the other hand, the proximity of an army causes prices to go up, making peasants rich and draining the people's substance away.
 		With this loss of substance and exhaustion of strength, the homes of the people will be stripped bare, and three-tenths of their income will be dissipated while the government expenses will amount to four-tenths of its total revenue.
