--- a/Readings.html
+++ b/Readings.html
@@ -13,11 +13,11 @@
     <nav>
     <ul>
 	<dl><b>Table of Contents:</b></dl>
-	<dd><b>Author | Title</b></dd>
-	<dd><i><a href="#ArtOfWar">Sun Tzu | The Art of War</a></i></dd>
-	<dd><i><a href="#BookOf5Rings">Miyamoto Musashi | A Book of 5 Rings</a></i></dd>
-	<dd><i><a href="#Dracula">Bram Stoker | Dracula</a></i></dd>
-	<dd><i><a href="#JourneyToTheW">Wu Cheng'en | Journey to the West</a></i></dd>
+	<dd><b>Author &emsp; | &emsp; Title</b></dd>
+	<dd><i><a href="#ArtOfWar">Sun Tzu &emsp; | &emsp; The Art of War</a></i></dd>
+	<dd><i><a href="#BookOf5Rings">Miyamoto Musashi &emsp; | &emsp; A Book of 5 Rings</a></i></dd>
+	<dd><i><a href="#Dracula">Bram Stoker &emsp; | &emsp; Dracula</a></i></dd>
+	<dd><i><a href="#JourneyToTheW">Wu Cheng'en &emsp; | &emsp; Journey to the West</a></i></dd>
     </ul>
     </nav>
     </figure>
@@ -61,6 +61,9 @@
 		Therefore in chariot fighting, when ten or more chariots have been taken, those should be rewarded who took the first. Our own flags should be substituted for those of the enemy, and the chariots mixed and used in conjunction with ours. The captured soldiers should be kindly treated and kept.
 		This is called, using the conquered foe to augment one’s own strength. In war, then, let your great object be victory, not lengthy campaigns.
 		Thus it may be known that the leader of armies is the arbiter of the people’s fate, the man on whom it depends whether the nation shall be in peace or in peril.
+	</dd>
+	<dd><b>Chapter 3:</b> ...
+		
 	</dd>
     </dl>
 	    <hr>
