--- a/Readings.html
+++ b/Readings.html
@@ -36,7 +36,7 @@
 		<br>(1) &emsp; Which of the two sovereigns is imbued with the <i>Moral law</i>?
 		<br>(2) &emsp; Which of the two generals has most ability?
 		<br>(3) &emsp; With whom lie the advantages derived from <i>Heaven</i> and <i>Earth</i>?
-		<br>(4) &emsp; On which side is discipline most rigorously enforced?
+		<br>(4) &emsp; On which side is <i>Discipline</i> most rigorously enforced?
 		<br>(5) &emsp; Which army is stronger?
 		<br>(6) &emsp; On which side are officers and men more highly trained?
 		<br>(7) &emsp; In which army is there the greater constancy both in reward and punishment?
