--- a/Readings.html
+++ b/Readings.html
@@ -13,11 +13,11 @@
     <nav>
     <ul>
 	<dl><b>Table of Contents:</b></dl>
-	<dd><b>Author &emsp; | &emsp; Title</b></dd>
-	<dd><i><a href="#ArtOfWar">Sun Tzu &emsp; | &emsp; The Art of War</a></i></dd>
-	<dd><i><a href="#BookOf5Rings">Miyamoto Musashi &emsp; | &emsp; A Book of 5 Rings</a></i></dd>
-	<dd><i><a href="#Dracula">Bram Stoker &emsp; | &emsp; Dracula</a></i></dd>
-	<dd><i><a href="#JourneyToTheW">Wu Cheng'en &emsp; | &emsp; Journey to the West</a></i></dd>
+	<dd><b>Author: &emsp; Title</b></dd>
+	<dd><i>Sun Tzu: &emsp; <a href="#ArtOfWar"> The Art of War</a></i></dd>
+	<dd><i>Miyamoto Musashi: &emsp; <a href="#BookOf5Rings"> A Book of 5 Rings</a></i></dd>
+	<dd><i>Bram Stoker: &emsp; <a href="#Dracula"> Dracula</a></i></dd>
+	<dd><i>Wu Cheng'en: &emsp; <a href="#JourneyToTheW"> Journey to the West</a></i></dd>
     </ul>
     </nav>
     </figure>
