--- a/Readings.html
+++ b/Readings.html
@@ -11,14 +11,14 @@
     <hr>
     <figure>
     <nav>
-    <ul>
-	<dl><b>Table of Contents:</b></dl>
-	<dd><b>Author: &emsp; Title</b></dd>
-	<dd><i>Sun Tzu: &emsp; <a href="#ArtOfWar"> The Art of War</a></i></dd>
-	<dd><i>Miyamoto Musashi: &emsp; <a href="#BookOf5Rings"> A Book of 5 Rings</a></i></dd>
-	<dd><i>Bram Stoker: &emsp; <a href="#Dracula"> Dracula</a></i></dd>
-	<dd><i>Wu Cheng'en: &emsp; <a href="#JourneyToTheW"> Journey to the West</a></i></dd>
-    </ul>
+    <table>
+	    <tr><th><b>Table of Contents:</b></th></tr>
+	    <tr><td><b>Author: &emsp; Title</b></td></tr>
+	    <tr><td><i>Sun Tzu: &emsp; <a href="#ArtOfWar"> The Art of War</a></i></td></tr>
+	    <tr><td><i>Miyamoto Musashi: &emsp; <a href="#BookOf5Rings"> A Book of 5 Rings</a></i></td></tr>
+	    <tr><td><i>Bram Stoker: &emsp; <a href="#Dracula"> Dracula</a></i></td></tr>
+	    <tr><td><i>Wu Cheng'en: &emsp; <a href="#JourneyToTheW"> Journey to the West</a></i></td></tr>
+    </table>
     </nav>
     </figure>
     <section id="ArtOfWar">
