--- a/Readings.html
+++ b/Readings.html
@@ -13,11 +13,11 @@
     <nav>
     <table>
 	    <tr><th><b>Table of Contents:</b></th></tr>
-	    <tr><td><b>Author: &emsp; Title</b></td></tr>
-	    <tr><td><i>Sun Tzu: &emsp; <a href="#ArtOfWar"> The Art of War</a></i></td></tr>
-	    <tr><td><i>Miyamoto Musashi: &emsp; <a href="#BookOf5Rings"> A Book of 5 Rings</a></i></td></tr>
-	    <tr><td><i>Bram Stoker: &emsp; <a href="#Dracula"> Dracula</a></i></td></tr>
-	    <tr><td><i>Wu Cheng'en: &emsp; <a href="#JourneyToTheW"> Journey to the West</a></i></td></tr>
+	    <tr><td><b>Author:</td><td>Title</b></td></tr>
+	    <tr><td><i>Sun Tzu:</td><td><a href="#ArtOfWar">The Art of War</a></i></td></tr>
+	    <tr><td><i>Miyamoto Musashi:</td><td><a href="#BookOf5Rings">A Book of 5 Rings</a></i></td></tr>
+            <tr><td><i>Bram Stoker:</td><td><a href="#Dracula"> Dracula</a></i></td></tr>
+            <tr><td><i>Wu Cheng'en:</td><td><a href="#JourneyToTheW"> Journey to the West</a></i></td></tr>
     </table>
     </nav>
     </figure>
