--- a/Readings.html
+++ b/Readings.html
@@ -62,7 +62,7 @@
 		This is called, using the conquered foe to augment one’s own strength. In war, then, let your great object be victory, not lengthy campaigns.
 		Thus it may be known that the leader of armies is the arbiter of the people’s fate, the man on whom it depends whether the nation shall be in peace or in peril.
 	</dd>
-	<dd><b>Chapter 3:</b> ...
+	<dd><br><b>Chapter 3:</b> ...
 		
 	</dd>
     </dl>
