--- a/Readings.html
+++ b/Readings.html
@@ -24,7 +24,7 @@
     <section id="ArtOfWar">
     <dl>
 	    <dt><b><u>Sun Tzu | Art of War: December 2, 2018</b></u></dt>
-	    <dd><b>Chapter 1:</b> The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.
+	    <dd><br><b>Chapter 1:</b> The Art of War is a matter of <i>Life and Death</i> to the State that must not be ignored.
 		<br>There are 5 factors to consider in one's army: 
 		<br>(1)<i> &emsp; The Moral Law</i>, the law in which causes the people to be in complete accord with their ruler, so that they will follow him regardless of their lives, undismayed by any danger.
 		<br>(2)<i> &emsp; Heaven</i>, the importance of night and day, cold and heat, times and seasons.
@@ -62,9 +62,36 @@
 		This is called, using the conquered foe to augment one’s own strength. In war, then, let your great object be victory, not lengthy campaigns.
 		Thus it may be known that the leader of armies is the arbiter of the people’s fate, the man on whom it depends whether the nation shall be in peace or in peril.
 	</dd>
-	<dd><br><b>Chapter 3:</b> ...
-		
-	</dd>
+	<dd><br><b>Chapter 3:</b> In the practical <i>Art of War</i>, it is better to take your enemy's country whole and intact rather than shattered and destroyed. In addition, it is better to capture than destroy. To fight and conquer in all of your battles is not <i>supreme excellence</i>; <i>supreme excellence</i> is breaking the enemy's resistance without fighting.
+		In generalship, you must prioritize by stopping the enemy’s plans first; next is prevent the connection of the enemy’s forces; afterwards you attack the enemy’s army in the field. Your lowest option is to besiege walled cities.
+		If it's possible to avoid, you must not besiege it for it requires months of preparation time.
+	    <br>The general unable to control his anger will get his men killed while the town is left uncaptured. Thus, a skillful leader subdues the enemy without fighting. This is known as the <i>Stratagem</i> method.
+	    <br>This is the rule in war:<br>
+	    <br>if your forces are 10 on 1, then you surround them;
+	    <br>if 5 on 1, then you attack him;
+	    <br>if 2 on 1, you divide the army into two;
+	    <br>if 1 on 1, you offer battle;
+	    <br>if you have slightly less numbers than your enemy, then you must evade from them;
+	    <br>if you have significantly less numbers than your enemy, you must run from the enemy.
+	    <br>Although a fight may be made by a smaller force, in the end it needs to be captured by the larger force.<br>
+	    <br>The general is the wall to the State; if he is complete in securing all points then he is strong, but if he's defective then he is weak.
+		There are three ways a ruler can bring misfortune on his army:<br>
+	    <br><i>Hobbling an army</i>, the ignorance that your army is unable to follow your orders.
+	    <br>The refusal to adapt and lead your army in a different way that is better suited for them.
+	    <br>Employing officers that aren't able to handle specific situations.<br>
+	    <br>If the leader has done all three, his soldiers will rebel into anarchy ruining your chance to victory.
+	    <br>There are 5 essential conditions for victory:<br>
+	    <br>Know when to fight and when to leave.
+	    <br>Know how to handle superior and inferior forces.
+	    <br>If your army has boosted morale throughout all their ranks.
+	    <br>Stays prepared and strikes when the enemy isn't.
+	    <br>If your army isn't corrupted to anarchy.<br>
+	    <br>If you know the enemy and yourself, then you will not fear the result of a hundred battles.
+	    <br>If you know yourself but not the enemy, for every victory you will also suffer a defeat.
+	    <br>If you neither know yourself nor the enemy, then you will lose in every battle.
+       </dd>
+       <dd><br><b>Chapter 4:</b> ...
+       </dd>
     </dl>
 	    <hr>
     <section id="BookOf5Rings">
