--- a/Readings.html
+++ b/Readings.html
@@ -67,12 +67,12 @@
 		If it's possible to avoid, you must not besiege it for it requires months of preparation time.
 	    <br>The general unable to control his anger will get his men killed while the town is left uncaptured. Thus, a skillful leader subdues the enemy without fighting. This is known as the <i>Stratagem</i> method.
 	    <br>This is the rule in war:<br>
-	    <br>if your forces are 10 on 1, then you surround them;
-	    <br>if 5 on 1, then you attack him;
-	    <br>if 2 on 1, you divide the army into two;
-	    <br>if 1 on 1, you offer battle;
-	    <br>if you have slightly less numbers than your enemy, then you must evade from them;
-	    <br>if you have significantly less numbers than your enemy, you must run from the enemy.
+	    <br>If your forces are 10 on 1, then you surround them
+	    <br>If 5 on 1, then you attack him
+	    <br>If 2 on 1, you divide the army into two
+	    <br>If 1 on 1, you offer battle
+	    <br>If you have slightly less numbers than your enemy, then you must evade from them;
+	    <br>If you have significantly less numbers than your enemy, you must run from the enemy.
 	    <br>Although a fight may be made by a smaller force, in the end it needs to be captured by the larger force.<br>
 	    <br>The general is the wall to the State; if he is complete in securing all points then he is strong, but if he's defective then he is weak.
 		There are three ways a ruler can bring misfortune on his army:<br>
