--- a/Readings.html
+++ b/Readings.html
@@ -90,7 +90,12 @@
 	    <br>If you know yourself but not the enemy, for every victory you will also suffer a defeat.
 	    <br>If you neither know yourself nor the enemy, then you will lose in every battle.
        </dd>
-       <dd><br><b>Chapter 4:</b> ...
+       <dd><br><b>Chapter 4:</b> Good soldiers stray away from the possibility of defeat and wait for an opportunity to fight.
+	   <br>To secure yourself from defeat is entirely on your hands as well as the enemy's. One who knows how to avoid defeat is powerful on defense, but one who knows how to defeat the enemy is powerful on offense.
+	       The general who is skilled in defense hides in secrecy (Viet Cong); he who is skilled in attack flashes forth from the topmost heights of heaven (USA).
+	   <br>In war, the <i>Acme of Excellence</i> is succeeding without mistakes; to make your defeat impossible and take every chance on defeating the enemy.
+       </dd>
+       <dd><br><b>Chapter 5:</b> ...
        </dd>
     </dl>
 	    <hr>
