--- a/WebProject.html
+++ b/WebProject.html
@@ -41,11 +41,12 @@
 					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field.</dd>
 					<br>	
 		<p>				
-							<img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td></tr>						
-		
+							<img src="Card Template.png" alt="Image failed to load" width="164" height="242">						
+		<div>
 			This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the name and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
 			For instance, a fire warlock will overpower an ice mage in combat but if they're in the mountains during a blizzard the warlock will get weaker while the mage gets stronger, turning the tides of battle.  
+		</div>
 		</p>			
 					<section id="MT">
 					<dt><b>Movement Types :</b></dt>
