--- a/WebProject.html
+++ b/WebProject.html
@@ -43,10 +43,15 @@
 			<table>				
 			<tr><th>Warrior Card Template:</th><th>&emsp; Description</th></tr>				
 			<tr><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
-			<td><div>This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the name and <i>element</i> of the warrior. 
+			<td><div>This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
 			For instance, a fire warlock will overpower an ice mage in combat but if they're in the mountains during a blizzard the warlock will get weaker while the mage gets stronger, 
-			turning the tides of battle.
+			turning the tides of battle. 
+			<br>Below the border is the <i>summoning cost</i> of that warrior. Each turn, you will receive <i>+3 summoning points</i> and out of 9 in total you can use it to summon your warrior in exchange for your points.
+			<br>The image on the center of the card is the canvas of your warrior.
+			<br>As for the bottom border, it tells you the warrior-type and description of that warrior, sometimes telling you if it has a special effect.
+			<br>The very bottom, underneath the horizontal line, is the statistics of that warrior. <i>Attack</i> mode is the stance your card is in when facing forward. As such, when you move or initiate an offense manuever you're always in <i>attack</i>. If you smite the enemy with this card, you will deduct your opponent's life points by your <i>Attack points</i> subtracted by your opponent's. If it failed, however, it becomes vice versa.
+			<i>Defensive</i> mode is when you hold your ground by positioning your card sideways. If your card is ever defeated in this position, you will not lose health points. If it's a successful hold, the enemy loses health points from what is deducted between your card's defense against your opponent's offense.
 			</div></td></tr>
 			</table>
 					
