--- a/WebProject.html
+++ b/WebProject.html
@@ -43,7 +43,7 @@
 			<table>				
 			<tr><th>Warrior Card Template:</th><th>&emsp; Description</th></tr>				
 			<tr><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
-			<td><div>This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
+			<td><div>&emsp; This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
 			For instance, a fire warlock will overpower an ice mage in combat but if they're in the mountains during a blizzard the warlock will get weaker while the mage gets stronger, 
 			turning the tides of battle. 
