--- a/WebProject.html
+++ b/WebProject.html
@@ -50,7 +50,7 @@
 			<br>&emsp; Below the border is the <i>summoning cost</i> of that warrior. Each turn, you will receive <i>+3 summoning points</i> and out of 9 in total you can use it to summon your warrior in exchange for your points.<br>
 			<br>&emsp; The image on the center of the card is the canvas of your warrior.<br>
 			<br>&emsp; As for the bottom border, it tells you the warrior-type and description of that warrior, sometimes telling you if it has a special effect.<br>
-			<br>&emsp; The very bottom, underneath the horizontal line, is the statistics of that warrior. 
+			<br>&emsp; The very bottom, underneath the horizontal line, is the statistics of that warrior.<br> 
 			<br><i>Attack</i> mode is the stance your card is in when facing forward. As such, when you move or initiate an offense manuever you're always in <i>Attack</i>. If you smite the enemy with this card, you will deduct your opponent's life points by your <i>Attack points</i> subtracted by your opponent's. If it failed, however, it becomes vice versa.
 			<br><i>Defensive</i> mode is when you hold your ground by positioning your card sideways. If your card is ever defeated in this position, you will not lose health points. If it's a successful hold, the enemy loses health points from what is deducted between your card's defense against your opponent's offense.
 			</div></td></tr>
