--- a/WebProject.html
+++ b/WebProject.html
@@ -41,7 +41,7 @@
 					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field.</dd>
 					<br>	
 			<table>				
-			<tr><th>Warrior Card:</th><th>&emsp; Description</th></tr>				
+			<tr><th><u>Warrior Card:</u></th><th>&emsp; <u>Description</u></th></tr>				
 			<tr><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
 			<td><div>&emsp; This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
@@ -51,7 +51,7 @@
 			<br>&emsp; The image on the center of the card is the canvas of your warrior.<br>
 			<br>&emsp; As for the bottom border, it tells you the warrior-type and description of that warrior, sometimes telling you if it has a special effect.<br>
 			<br>&emsp; The very bottom, underneath the horizontal line, is the statistics of that warrior.<br> 
-			<br><i>Attack</i> mode is the stance your card is in when facing forward. As such, when you move or initiate an offense manuever you're always in <i>Attack</i>. If you smite the enemy with this card, you will deduct your opponent's life points by your <i>Attack points</i> subtracted by your opponent's. If it failed, however, it becomes vice versa.
+			<br><i>Attack</i> mode is the stance your card is in when facing forward. As such, when you move or initiate an offense manuever you're always in <i>Attack</i>. If you smite the enemy with this card, you will deduct your opponent's life points by your <i>Attack points</i> subtracted by your opponent's. If it failed, however, it becomes vice versa.<br>
 			<br><i>Defensive</i> mode is when you hold your ground by positioning your card sideways. If your card is ever defeated in this position, you will not lose health points. If it's a successful hold, the enemy loses health points from what is deducted between your card's defense against your opponent's offense.
 			</div></td></tr>
 			</table>
