--- a/WebProject.html
+++ b/WebProject.html
@@ -42,7 +42,7 @@
 					<br>	
 			<table>				
 			<tr><th><u>Warrior Card:</u></th><th>&emsp; <u>Description</u></th></tr>				
-			<tr><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
+			<tr id="ROW1">><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
 			<td><div>&emsp; This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
 			For instance, a fire warlock will overpower an ice mage in combat but if they're in the mountains during a blizzard the warlock will get weaker while the mage gets stronger, 
