--- a/WebProject.html
+++ b/WebProject.html
@@ -97,7 +97,7 @@
 
 			<table>
 
-				<tr><th>Warrior-Types: </th></tr>
+				<tr id="ROW2"><th>Warrior-Types: </th></tr>
 				<tr><td>Goblins</td><td>Orcs</td></tr>
 				<tr><td>Dwarves</td><td>Machines</td></tr>
 				<tr><td>Elves</td><td>Fairies</td></tr>
