--- a/WebProject.html
+++ b/WebProject.html
@@ -41,7 +41,7 @@
 					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field.</dd>
 					<br>	
 			<table>				
-			<tr><th><u>Warrior Card:</u></th><th>&emsp; <u>Description</u></th></tr>				
+			<tr><th><u>Warrior Card:</u></th><th>&emsp; <u>Description:</u></th></tr>				
 			<tr id="ROW1"><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td>						
 			<td><div>&emsp; This is a card template. Based off of <i>Yu-Gi-Oh!</i>, the upper border is the <i>name</i> and <i>element</i> of the warrior. 
 			An <i>element</i> is a warrior attribute that provides a rock, paper, scissors mechanic especially under situations on the time of day or the terrain they're under. 
