--- a/WebProject.html
+++ b/WebProject.html
@@ -16,8 +16,8 @@
 		<audio controls src="Tsungi Horn ATLA OST.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Overture GoW.mp3"><p>Audio doesn't work</p></audio>
 
-			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
-			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
+			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.
+			<br>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 
 				<figure>	
 				<nav>
